# qt-moul-chat

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
Net/: AuthClient.cpp  AuthClient.h  CMakeLists.txt  GateClient.cpp  GateClient.h  ServerCommunication.cpp  ServerCommunication.cpp.orig  ServerCommunication.h  ServerSettings.cpp  ServerSettings.h
